# oslobike

./: .bumpversion.cfg  .readthedocs.yml  MANIFEST.in  README.md  requirements.txt  setup.cfg
.github/workflows/: tests.yml
docs/source/: api.rst  conf.py  index.rst  install.rst  requirements.txt
examples/: README.rst  plot_times.py
src/oslobike/: __init__.py  oslobike.py
tests/: test_oslobike.py
