[metadata]
name = oslobike
version = 0.0.1
license = "MIT license",
description = Download bike sharing data from Oslo
long_description = file: README.md
author = FirstName SurName
author_email = mail@provider.com
url = https://github.com/visualizards/oslobike
classifiers=
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires = 
    pandas

[options.extras_require]
tests=
    pytest

docs=
    sphinx
    sphinx-rtd-theme
    sphinx-gallery
    matplotlib

[options.packages.find]
where=src

[flake8]
max-line-length = 100
